fixed spacing on smaller viewports

--- a/style.css
+++ b/style.css
@@ -35,21 +35,22 @@ header {
 }
 
 nav {
-  height: 2cm;
-  min-height: 15dvh;
-  max-height: 30dvh;
+  height: 30vh;
+  min-height: 1cm;
+  max-height: 300dvh;
   margin: 20px 40px 20px 40px;
   position: relative;
 }
 
 nav ul {
   display: grid;
+  min-height: 100px;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   grid-template-rows: auto auto;
   grid-auto-flow: row;
   gap: 50px;
   list-style: none;
-  padding: 0px 10px 0px 10px;  
+  padding: 0px 1px 0px 1px;  
 }
 
 nav a {
@@ -132,6 +133,14 @@ form {
   }
 }
 
+fieldset {
+  min-width: 0;
+}
+
+input, select, textarea {
+  max-width: 100%;
+}
+
 h2 {
   color: color(rec2020 0.42 0.01 0.67);
 }
@@ -164,5 +173,9 @@ footer {
 @media screen and (max-width: 600px) {
   body {
     background-color: #8f7eb2; /* Change color on mobile */
+  }
+
+  nav {
+    height: fit-content;
   }
 }
